common/k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: red-bici-service
spec:
  type: NodePort
  selector:
    app: red-bici
  ports:
    - name: frontend
      protocol: TCP
      nodePort: 30000
      port: 80
      targetPort: 80
    - name: backend
      protocol: TCP
      nodePort: 30001
      port: 3000
      targetPort: 3000
