common/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: red-bici-ingress
  annotations:
    nginx.ingress.kubernetes.io/use-forwarded-headers: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - http:
      paths:
      - path: /(auth/.*)
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 5000
      - path: /(google/callback)
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 5000
      - path: /api/(.*)
        pathType: Prefix
        backend:
          service:
            name: crud-service
            port:
              number: 3000
      - path: /(map.*)
        pathType: Prefix
        backend:
          service:
            name: map-service
            port:
              number: 3000
      - path: /(.*)
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
